<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textodato"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textodato"
        android:textStyle="bold"
        android:textColor="@color/texto"/>

        <TextView
            android:id="@+id/textonombre"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textonombre"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

        <TextView
            android:id="@+id/textofecha"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textofecha"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

        <TextView
            android:id="@+id/textotelefono"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textotelefono"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

        <TextView
            android:id="@+id/textomail"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textomail"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

        <TextView
            android:id="@+id/textodescripcion"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textodescripcion"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

        <Button
        android:id="@+id/botonedita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botonedita"
        android:textColor="@color/naranja"
        android:layout_marginTop="15dp"
        android:onClick="sendMessage"

       />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>